fix: fix layout bugs

--- a/plants/sass/components/_prices.scss
+++ b/plants/sass/components/_prices.scss
@@ -5,9 +5,11 @@
    }
 }
 .prices__type {
-   display: flex;
-   flex-direction: column;
-   //align-items: center;
+   @include media-small-tablet {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }
 }
 
 .prices__title {
@@ -33,6 +35,8 @@
    border-radius: 20px;
    @include media-mobile {
       padding: 15.08px 22px 12px;
+      max-width: 224px;
+      box-sizing: border-box;
    }
 }
 
