--- a/plants/sass/components/_welcome.scss
+++ b/plants/sass/components/_welcome.scss
@@ -20,7 +20,7 @@
       padding: 0;
       flex-basis: 51%;
    }
-   @include media-tablet {
+   @include media-small-tablet {
       flex-basis: 100%;
    }
 }
