--- a/plants/sass/style.css
+++ b/plants/sass/style.css
@@ -957,7 +957,7 @@ h3 {
     flex-basis: 51%;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 650px) {
   .welcome .welcome__content {
     flex-basis: 100%;
   }
@@ -1235,9 +1235,12 @@ h3 {
   }
 }
 
-.prices__type {
-  display: flex;
-  flex-direction: column;
+@media (max-width: 650px) {
+  .prices__type {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .prices__title {
@@ -1278,6 +1281,8 @@ h3 {
 @media (max-width: 380px) {
   .prices__items {
     padding: 15.08px 22px 12px;
+    max-width: 224px;
+    box-sizing: border-box;
   }
 }
 
